objects/Prod_Cls_to_Feat_Jct__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInitiative__c</fullName>
        <description>Is product initiative</description>
        <formula>Product_Class__r.IsInitiative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prod_Class_to_Feature_Jct_Number__c</fullName>
        <displayFormat>PCFJ-{000000}</displayFormat>
        <label>Prod Class to Feature Jct Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipName>Prod_Class_to_Prod_Feature_Jcts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipName>Prod_Class_to_Prod_Feature_Jcts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Prod_Class_to_Feature_Jct_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ValidMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidMapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Prod Class to Feature Jct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prod Feature Jct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Class to Feature Jcts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>